@@ -17,7 +17,12 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Firmador.  If not, see <http://www.gnu.org/licenses/>.  */
 
+import java.io.IOException;
+import java.lang.invoke.MethodHandles;
+import java.util.ArrayList;
+import java.util.List;
 import javax.swing.SwingUtilities;
+import java.net.URISyntaxException;
 
 import org.apache.pdfbox.pdmodel.font.FontMappers;
 
@@ -25,26 +30,42 @@ import cr.libre.firmador.gui.GUIInterface;
 import cr.libre.firmador.gui.GUISelector;
 import cr.libre.firmador.plugins.PluginManager;
 
-import java.io.IOException;
-import java.net.URISyntaxException;
-
 public class Firmador {
 
-    public static void main(String[] args) throws InterruptedException, IOException, URISyntaxException {
-    
+    public static void main(String[] args) throws URISyntaxException, IOException, InterruptedException {
+        for (String s : args) {
+            if (s.equals("run")) {
+                doMain(args);
+                return;
+            }
+        }
+        List<String> command = new ArrayList<String>();
+        String processCommand = ProcessHandle.current().info().command().orElse("java");
+        command.add(processCommand);
+        String[] arguments = ProcessHandle.current().info().arguments().orElse(new String[0]);
+        if (arguments.length == 0) {
+            command.add("-jar");
+            command.add(MethodHandles.lookup().lookupClass().getProtectionDomain().getCodeSource().getLocation().toURI().getPath());
+        }
+        command.add("--add-exports");
+        command.add("jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED");
+        for (String argument : arguments) command.add(argument);
+        command.add("run");
+        new ProcessBuilder().inheritIO().command(command).start().waitFor();
+    }
+
+    public static void doMain(String[] args) {
         // PDFBox font cache warmup
         FontMappers.instance().getFontBoxFont(null, null);
         GUISelector guiselector = new GUISelector();
         GUIInterface gui = guiselector.getInterface(args);
         gui.setArgs(args);
         PluginManager pluginManager = new PluginManager(gui);
-       
         SwingUtilities.invokeLater(pluginManager);
         SwingUtilities.invokeLater(new Runnable() {
             public void run() {
                 gui.loadGUI();
                 gui.setPluginManager(pluginManager);
-                
             }
         });
     }
